@@ -6,15 +6,19 @@
 * Рассказать про структуру rtmp урлов
 * Рассказать про захват видео
 * Описание задержек, откуда что берется
-
+* проверить описание /stream/mpegts
 
 Фичи
 ----
 
+* добавить публикацию по http mpegts post
 * Периодический перезапрос авторизации на открытых персистентных сессиях
-* Подумать как отдавать метадату с временем текущего сегмента
 * mpeg2coder
 * Другие авторизационные бекенды
+* mpegts-http старт с keyframe
+* messaging
+* Подумать как отдавать метадату с временем текущего сегмента
+* хранение метадаты в архиве
 
 Архив
 -----
